# nickel-auth

./: Cargo.toml  LICENSE  README.md  test.sh
examples/: example.rs
src/: .lib.rs.swp  authenticated_session.rs  authorizer.rs  lib.rs  session.rs
