[package]
name = "nickel-auth"
version = "0.1.0"
authors = ["Simon Persson <simon@flaskpost.org>"]

[dependencies.nickel_cookies]
git = "https://github.com/nickel-org/cookies.git"

[dependencies.nickel_session]
git = "https://github.com/nickel-org/session.git"

[dependencies]
nickel = "*"
rustc-serialize = "*"
openssl = "*"
rand = "0.3"
byteorder = "*"
time = "*"
cookie = "*"
plugin = "*"
typemap = "*"
